# youtube-sentiment-pipeline

./: .gitignore  AGENTS.md  README.md  consumer_test.py  docker-compose.yml  main.py  pgadmin_servers.json  producer.py  pyproject.toml  requirements.txt  run_pipeline.py  setup_database.py  test_youtube_api.py
config/: .env.template
pentaho/: Dockerfile  generate_ktr.py  run_pentaho.sh  run_pentaho_batch.py
pentaho/jobs/: run_pipeline.kjb  silver_to_gold.ktr
postman/: YouTube_Sentiment_Pipeline.postman_collection.json  YouTube_Sentiment_Pipeline.postman_environment.json
spark/: Dockerfile  Dockerfile.worker
src/api/: main.py
src/dashboard/: app.py
src/nlp/: emotion_analyzer.py
src/producer/: kafka_check.py  test_api.py  verify_kafka.py  youtube_producer.py  youtube_simulator.py
src/spark/: bronze_batch.py  bronze_to_silver.py  gold_emotion_pipeline.py  silver_to_gold.py  silver_to_gold_hf.py  streaming_bronze.py
src/utils/: config.py  db.py  orchestrator.py  spark.py
