[project]
name = "youtube-sentiment-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.3.1",
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "astunparse==1.6.3",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "comm==0.2.3",
    "contourpy==1.3.2",
    "cv==1.0.0",
    "cycler==0.12.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fastapi>=0.136.1",
    "filelock==3.20.2",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "fsspec==2025.12.0",
    "gast==0.7.0",
    "google-pasta==0.2.0",
    "grpcio==1.76.0",
    "h5py==3.15.1",
    "idna==3.11",
    "imageio==2.37.2",
    "ipykernel==7.1.0",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "keras==3.12.0",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "libclang==18.1.1",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "mpmath==1.3.0",
    "namex==0.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "opencv-python==4.13.0.90",
    "opt-einsum==3.4.0",
    "optree==0.18.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.2",
    "psutil==7.2.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py4j==0.10.9.9",
    "pygments==2.19.2",
    "pyparsing==3.3.1",
    "pyspark==4.1.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "scikit-image==0.25.2",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.2.0",
    "tifffile==2025.5.10",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "wcwidth==0.2.14",
    "werkzeug==3.1.4",
    "wrapt==2.0.1",
]
